--- a/DmsDef.props
+++ b/DmsDef.props
@@ -26,6 +26,7 @@
       <PrecompiledHeader></PrecompiledHeader>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <TreatAngleIncludeAsExternal>true</TreatAngleIncludeAsExternal>
       <WarningLevel>Level3</WarningLevel>
