--- a/qtgui/exe/GeoDmsGuiQt.vcxproj.filters
+++ b/qtgui/exe/GeoDmsGuiQt.vcxproj.filters
@@ -96,6 +96,7 @@
     <ClCompile Include="src\qt_advanced_docking_system\ResizeHandle.cpp">
       <Filter>Qt Advanced Docking System</Filter>
     </ClCompile>
+    <ClCompile Include="src\mymodel.cpp" />
     <ClCompile Include="src\DmsViewArea.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -167,6 +168,7 @@
     <QtMoc Include="src\DmsTreeView.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="src\mymodel.h" />
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="GeoDmsGuiQt.qrc">
@@ -188,9 +190,6 @@
     </ClInclude>
     <ClInclude Include="src\qt_advanced_docking_system\IconProvider.h">
       <Filter>Qt Advanced Docking System</Filter>
-    </ClInclude>
-    <ClInclude Include="src\DmsViewArea.h">
-      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
