--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ todo*.txt
 /XE2/DMS/GeoDmsGui.identcache
 /exe/gui/GeoDmsGuiQt.vcxproj.filters
 /exe/gui/GeoDmsGuiQt.filters
+/qtgui/exe/res/images/down_arrow.xcf
