--- a/run/exe/DmsRun.vcxproj
+++ b/run/exe/DmsRun.vcxproj
@@ -65,6 +65,9 @@
     <ClCompile Include="src\MainRun.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\clc\dll\Clc.vcxproj">
+      <Project>{41dd88b1-2f24-45aa-9cbb-4318f97bbc22}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\geo\dll\GeoDLL.vcxproj">
       <Project>{c0c75a4b-dd01-4272-8fb5-3a242da125ba}</Project>
     </ProjectReference>
