--- a/shv/dll/ShvDLL.vcxproj
+++ b/shv/dll/ShvDLL.vcxproj
@@ -210,6 +210,9 @@
     <ResourceCompile Include="res\DmShv32.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\clc\dll\Clc.vcxproj">
+      <Project>{41dd88b1-2f24-45aa-9cbb-4318f97bbc22}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\clc\dll\Clc2.vcxproj">
       <Project>{604fd9aa-6df6-46d7-a1b9-e66b413dc21b}</Project>
     </ProjectReference>
