--- a/stg/dll/StgDll.vcxproj
+++ b/stg/dll/StgDll.vcxproj
@@ -42,8 +42,10 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>./src;../../sym/dll/src;../../stgimpl/dll/src;../../rtc/dll/src;../../tic/dll/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>DMSTG_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
     <Link Condition="'$(Configuration)'=='Release'" >
       <DelayLoadDLLs>gdal.dll</DelayLoadDLLs>
     </Link>
@@ -58,6 +60,15 @@
     <ClCompile Include="src\gdal\gdal_base.cpp" />
     <ClCompile Include="src\gdal\gdal_grid.cpp" />
     <ClCompile Include="src\gdal\gdal_vect.cpp" />
+    <ClCompile Include="src\asc\AsciiImp.cpp" />
+    <ClCompile Include="src\bmp\BmpImp.cpp" />
+    <ClCompile Include="src\odbc\OdbcImp.cpp" />
+    <ClCompile Include="src\xdb\XdbImp.cpp" />
+    <ClCompile Include="src\shp\ShpImp.cpp" />
+    <ClCompile Include="src\tif\TifImp.cpp" />
+    <ClCompile Include="src\dbf\dbfImp.cpp" />
+    <ClCompile Include="src\ImplMain.cpp" />
+	
     <CustomBuild Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\gdal\LICENSE.TXT" Condition="'$(Platform)'=='x64'">
       <FileType>Document</FileType>
       <Command>
@@ -111,7 +122,17 @@
     <ClCompile Include="src\DllMain.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\cfs\CompoundStorageManager.h" />
+    <ClInclude Include="src\asc\AsciiImp.h" />
+    <ClInclude Include="src\bmp\BmpImp.h" />
+    <ClInclude Include="src\odbc\OdbcImp.h" />
+    <ClInclude Include="src\viewportinfo.h" />
+    <ClInclude Include="src\xdb\XdbImp.h" />
+    <ClInclude Include="src\shp\ShpImp.h" />
+    <ClInclude Include="src\tif\TifImp.h" />
+    <ClInclude Include="src\dbf\dbfImpl.h" />
+    <ClInclude Include="src\FilePtrHandle.h" />
+    <ClInclude Include="src\ImplMain.h" />
+	<ClInclude Include="src\cfs\CompoundStorageManager.h" />
     <ClInclude Include="src\asc\AscStorageManager.h" />
     <ClInclude Include="src\bmp\BmpStorageManager.h" />
     <ClInclude Include="src\gdal\gdal_base.h" />
@@ -134,9 +155,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\rtc\dll\DmRtc.vcxproj">
       <Project>{f1f7b558-ce16-4452-a876-eadb679a4463}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\stgimpl\dll\StgImpl.vcxproj">
-      <Project>{c2602d25-f606-49e3-a167-68a495a46dfa}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\tic\dll\DmTic.vcxproj">
       <Project>{ede22514-d90d-4600-aa3c-f2e149e57a4e}</Project>
